force-app/main/default/objects/Artist__c/Artist__c.object-meta.xml
<CustomObject>
    <label>Artist</label>
    <nameField>
        <displayFormat>AT-{00000}</displayFormat>
        <label>Artist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Artists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>