force-app/main/default/objects/Artist__c/fields/Rising_Star__c.field-meta.xml
<CustomField>
    <fullName>Rising_Star__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rising Star</label>
    <type>Checkbox</type>
</CustomField>