force-app/main/default/objects/Artist__c/fields/Total_Artworks_Sold__c.field-meta.xml
<CustomField>
    <fullName>Total_Artworks_Sold__c</fullName>
    <label>Total Artworks Sold</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>