force-app/main/default/objects/Artist__c/fields/Total_Sales_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Amount__c</fullName>
    <label>Total Sales Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>