force-app/main/default/objects/Artist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Rising_Star__c</columns>
    <columns>Tier__c</columns>
    <columns>Total_Artworks_Sold__c</columns>
    <columns>Total_Sales_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>